bigstream/bigstream-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-bigstream-api
  labels:
    app: bigstream
spec:
  ports:
    - port: 19980
      name: control-api
    - port: 19080
      name: storage-api
    - port: 19180
      name: http-listener
  selector:
    app: bigstream
    tier: platform
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: main-bigstream-httpio
  labels:
    app: bigstream
spec:
  ports:
    - port: 19180
      name: http-listener
  selector:
    app: bigstream
    tier: platform
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigstream
  labels:
    app: bigstream
spec:
  selector:
    matchLabels:
      app: bigstream
      tier: platform
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bigstream
        tier: platform
    spec:
      containers:
      - image: igridproject/bigstream:1.2.3
        name: bigstream
        imagePullPolicy: Always
        ports:
        - containerPort: 19980
          name: control-api
        - containerPort: 19080
          name: storage-api
        - containerPort: 19180
          name: http-listener
        volumeMounts:
        - name: bs-storage-data
          mountPath: /var/bigstream/data
      volumes:
      - name: bs-storage-data
        persistentVolumeClaim:
          claimName: bs-pvclaim
