bigstream/rabbitmq-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-server
  labels:
    app: bigstream
spec:
  ports:
    - port: 5672
  selector:
    app: bigstream
    tier: rabbitmq
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-server
  labels:
    app: bigstream
spec:
  selector:
    matchLabels:
      app: bigstream
      tier: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bigstream
        tier: rabbitmq
    spec:
      containers:
      - image: igridproject/rabbitmq
        command: ["rabbitmq-server"]
        args: ["--hostname","rabbitmq-server"]
        name: bs-rabbitmq-server
