bigstream/redis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  labels:
    app: bigstream
spec:
  ports:
    - port: 6379
  selector:
    app: bigstream
    tier: redis
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis-server
  labels:
    app: bigstream
spec:
  selector:
    matchLabels:
      app: bigstream
      tier: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bigstream
        tier: redis
    spec:
      containers:
      - image: redis:4
        command: ["redis-server"]
        args: ["--appendonly","yes"]
        name: bs-redis-server
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-pvclaim
