bigstream/tokengen-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: bigstream-token-generator
  labels:
    app: bigstream
spec:
  ports:
    - port: 3000
      name: www
  selector:
    app: bigstream
    tier: webtool
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigstream-token-generator
  labels:
    app: bigstream
spec:
  selector:
    matchLabels:
      app: bigstream
      tier: webtool
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bigstream
        tier: webtool
    spec:
      containers:
      - image: igridproject/bigstream-token-generator:latest
        name: bigstream-token-generator
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: www
